revert a change that would allow the config provider to silently violate its contract.  Fixed depreciation warnings.